all lexic stuff is moved to class Lex

--- a/config
+++ b/config
@@ -1,8 +1,10 @@
 #!/bin/bash 
  
  # The relative path to the directory, containing binary executables: 
- binpath='./build/release/bin'
+ binpath='build/release/bin'
  
  # The relative path to the directory, containing math sources:
- mathpath='./math'
+ mathpath='math'
 
+memcheck='yes'
+#memcheck='no'
