--- a/config
+++ b/config
@@ -6,5 +6,5 @@
  # The relative path to the directory, containing math sources:
  mathpath='math'
 
-memcheck='yes'
+№memcheck='yes'
 #memcheck='no'
