--- a/src/smm/Makefile.am
+++ b/src/smm/Makefile.am
@@ -26,7 +26,7 @@ libsmm_la_SOURCES = \
 	../rus/show.cpp \
 	../rus/expr.cpp \
 	\
-	globals.cpp \
+	sys.cpp \
 	math_symb.cpp \
 	parser.cpp \
 	show.cpp \
