--- a/src/mm/Makefile.in
+++ b/src/mm/Makefile.in
@@ -115,15 +115,14 @@ am__DEPENDENCIES_1 =
 libmm_la_DEPENDENCIES = $(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
 	$(am__DEPENDENCIES_1)
 am__libmm_la_SOURCES_DIST = ../smm/show.cpp all.cpp cut/parser.cpp \
-	cut/globals.cpp cut/show.cpp merge/parser.cpp sys.cpp \
-	peg_parser.cpp show.cpp spirit_parser.cpp translate.cpp \
-	tree.cpp
+	cut/globals.cpp cut/show.cpp merge/parser.cpp ast.cpp sys.cpp \
+	parser.cpp show.cpp translate.cpp tree.cpp
 am__dirstamp = $(am__leading_dot)dirstamp
 @SPLIT_COMPILE_FALSE@am_libmm_la_OBJECTS = ../smm/show.lo all.lo
 @SPLIT_COMPILE_TRUE@am_libmm_la_OBJECTS = ../smm/show.lo cut/parser.lo \
 @SPLIT_COMPILE_TRUE@	cut/globals.lo cut/show.lo merge/parser.lo \
-@SPLIT_COMPILE_TRUE@	sys.lo peg_parser.lo show.lo \
-@SPLIT_COMPILE_TRUE@	spirit_parser.lo translate.lo tree.lo
+@SPLIT_COMPILE_TRUE@	ast.lo sys.lo parser.lo show.lo \
+@SPLIT_COMPILE_TRUE@	translate.lo tree.lo
 libmm_la_OBJECTS = $(am_libmm_la_OBJECTS)
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
@@ -353,8 +352,6 @@ noinst_HEADERS = \
 	merge/parser.hpp \
 	\
 	adaptors.hpp \
-	spirit_grammar.hpp \
-	spirit_parser.hpp \
 	tree.hpp 
 
 @SPLIT_COMPILE_FALSE@libmm_la_SOURCES = \
@@ -370,10 +367,10 @@ noinst_HEADERS = \
 @SPLIT_COMPILE_TRUE@	\
 @SPLIT_COMPILE_TRUE@	merge/parser.cpp \
 @SPLIT_COMPILE_TRUE@	\
+@SPLIT_COMPILE_TRUE@	ast.cpp \
 @SPLIT_COMPILE_TRUE@	sys.cpp \
-@SPLIT_COMPILE_TRUE@	peg_parser.cpp \
+@SPLIT_COMPILE_TRUE@	parser.cpp \
 @SPLIT_COMPILE_TRUE@	show.cpp \
-@SPLIT_COMPILE_TRUE@	spirit_parser.cpp \
 @SPLIT_COMPILE_TRUE@	translate.cpp \
 @SPLIT_COMPILE_TRUE@	tree.cpp
 
@@ -530,10 +527,10 @@ distclean-compile:
 
 @AMDEP_TRUE@@am__include@ @am__quote@../smm/$(DEPDIR)/show.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/all.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ast.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/main.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/peg_parser.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/parser.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/show.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/spirit_parser.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sys.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/translate.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/tree.Plo@am__quote@
