--- a/src/mm/Makefile.in
+++ b/src/mm/Makefile.in
@@ -114,15 +114,16 @@ LTLIBRARIES = $(noinst_LTLIBRARIES)
 am__DEPENDENCIES_1 =
 libmm_la_DEPENDENCIES = $(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
 	$(am__DEPENDENCIES_1)
-am__libmm_la_SOURCES_DIST = ../smm/show.cpp all.cpp cut/parser.cpp \
-	cut/globals.cpp cut/show.cpp merge/parser.cpp ast.cpp sys.cpp \
-	parser.cpp show.cpp translate.cpp tree.cpp
+am__libmm_la_SOURCES_DIST = ../smm/show.cpp ../smm/ast.cpp all.cpp \
+	cut/parser.cpp cut/globals.cpp cut/show.cpp merge/parser.cpp \
+	ast.cpp sys.cpp parser.cpp show.cpp translate.cpp tree.cpp
 am__dirstamp = $(am__leading_dot)dirstamp
-@SPLIT_COMPILE_FALSE@am_libmm_la_OBJECTS = ../smm/show.lo all.lo
-@SPLIT_COMPILE_TRUE@am_libmm_la_OBJECTS = ../smm/show.lo cut/parser.lo \
-@SPLIT_COMPILE_TRUE@	cut/globals.lo cut/show.lo merge/parser.lo \
-@SPLIT_COMPILE_TRUE@	ast.lo sys.lo parser.lo show.lo \
-@SPLIT_COMPILE_TRUE@	translate.lo tree.lo
+@SPLIT_COMPILE_FALSE@am_libmm_la_OBJECTS = ../smm/show.lo \
+@SPLIT_COMPILE_FALSE@	../smm/ast.lo all.lo
+@SPLIT_COMPILE_TRUE@am_libmm_la_OBJECTS = ../smm/show.lo ../smm/ast.lo \
+@SPLIT_COMPILE_TRUE@	cut/parser.lo cut/globals.lo cut/show.lo \
+@SPLIT_COMPILE_TRUE@	merge/parser.lo ast.lo sys.lo parser.lo \
+@SPLIT_COMPILE_TRUE@	show.lo translate.lo tree.lo
 libmm_la_OBJECTS = $(am_libmm_la_OBJECTS)
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
@@ -356,10 +357,12 @@ noinst_HEADERS = \
 
 @SPLIT_COMPILE_FALSE@libmm_la_SOURCES = \
 @SPLIT_COMPILE_FALSE@	../smm/show.cpp \
+@SPLIT_COMPILE_FALSE@	../smm/ast.cpp \
 @SPLIT_COMPILE_FALSE@	all.cpp
 
 @SPLIT_COMPILE_TRUE@libmm_la_SOURCES = \
 @SPLIT_COMPILE_TRUE@	../smm/show.cpp \
+@SPLIT_COMPILE_TRUE@	../smm/ast.cpp \
 @SPLIT_COMPILE_TRUE@	\
 @SPLIT_COMPILE_TRUE@	cut/parser.cpp \
 @SPLIT_COMPILE_TRUE@	cut/globals.cpp \
@@ -440,6 +443,7 @@ clean-noinstLTLIBRARIES:
 	@: > ../smm/$(DEPDIR)/$(am__dirstamp)
 ../smm/show.lo: ../smm/$(am__dirstamp) \
 	../smm/$(DEPDIR)/$(am__dirstamp)
+../smm/ast.lo: ../smm/$(am__dirstamp) ../smm/$(DEPDIR)/$(am__dirstamp)
 cut/$(am__dirstamp):
 	@$(MKDIR_P) cut
 	@: > cut/$(am__dirstamp)
@@ -525,6 +529,7 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
+@AMDEP_TRUE@@am__include@ @am__quote@../smm/$(DEPDIR)/ast.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@../smm/$(DEPDIR)/show.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/all.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ast.Plo@am__quote@
