common executable for mm, smm and rus

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,3 +4,24 @@ SUBDIRS = \
 	smm \
 	rus \
 	daem
+
+AM_CPPFLAGS = \
+	-I$(top_srcdir)/include \
+	-I$(top_srcdir)/peglib \
+	-I$(top_srcdir)/src \
+	$(BOOST_CPPFLAGS)
+
+bin_PROGRAMS = \
+	mdl
+
+mdl_SOURCES = \
+	main.cpp
+
+mdl_LDADD = \
+	$(top_builddir)/lib/libmm.la \
+	$(top_builddir)/lib/librus.la \
+	$(top_builddir)/lib/libsmm.la \
+	$(top_builddir)/lib/libcom.la \
+	$(BOOST_FILESYSTEM_LIB) \
+    $(BOOST_SYSTEM_LIB) \
+    $(BOOST_PROGRAM_OPTIONS_LIB)
