--- a/src/rus/Makefile.am
+++ b/src/rus/Makefile.am
@@ -10,10 +10,10 @@ AM_LDFLAGS = \
     $(BOOST_LDFLAGS) \
     $(PTHREAD_CFLAGS)
 
-bin_PROGRAMS = \
-	rus
+#bin_PROGRAMS = \
+#	rus
 	
-noinst_LTLIBRARIES = \
+lib_LTLIBRARIES = \
 	librus.la
 
 noinst_HEADERS = \
@@ -23,9 +23,6 @@ noinst_HEADERS = \
 
 if SPLIT_COMPILE
 librus_la_SOURCES = \
-	../smm/show.cpp \
-	../smm/ast.cpp \
-	\
 	expr/parse.cpp \
 	expr/unify.cpp \
 	\
@@ -40,13 +37,11 @@ librus_la_SOURCES = \
 	verify.cpp
 else
 librus_la_SOURCES = \
-	../smm/show.cpp \
-	../smm/ast.cpp \
 	all.cpp
 endif
 
-rus_SOURCES = \
-	main.cpp
+#rus_SOURCES = \
+#	main.cpp
 
 librus_la_LIBADD = \
 	$(BOOST_FILESYSTEM_LIB) \
@@ -54,9 +49,10 @@ librus_la_LIBADD = \
     $(BOOST_PROGRAM_OPTIONS_LIB) \
     $(PTHREAD_CFLAGS)
 
-rus_LDADD = \
-	librus.la \
-	$(BOOST_FILESYSTEM_LIB) \
-    $(BOOST_SYSTEM_LIB) \
-    $(BOOST_PROGRAM_OPTIONS_LIB) \
-    $(PTHREAD_CFLAGS)
+#rus_LDADD = \
+#	libsmm.la \
+#	librus.la \
+#	$(BOOST_FILESYSTEM_LIB) \
+#    $(BOOST_SYSTEM_LIB) \
+#    $(BOOST_PROGRAM_OPTIONS_LIB) \
+#    $(PTHREAD_CFLAGS)
