--- a/src/com/Makefile.in
+++ b/src/com/Makefile.in
@@ -138,9 +138,10 @@ LTLIBRARIES = $(lib_LTLIBRARIES)
 am__DEPENDENCIES_1 =
 libcom_la_DEPENDENCIES = $(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
 	$(am__DEPENDENCIES_1)
-am__libcom_la_SOURCES_DIST = all.cpp timer.cpp memusage.cpp
+am__libcom_la_SOURCES_DIST = all.cpp timer.cpp memusage.cpp common.cpp
 @SPLIT_COMPILE_FALSE@am_libcom_la_OBJECTS = all.lo
-@SPLIT_COMPILE_TRUE@am_libcom_la_OBJECTS = timer.lo memusage.lo
+@SPLIT_COMPILE_TRUE@am_libcom_la_OBJECTS = timer.lo memusage.lo \
+@SPLIT_COMPILE_TRUE@	common.lo
 libcom_la_OBJECTS = $(am_libcom_la_OBJECTS)
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
@@ -356,7 +357,8 @@ lib_LTLIBRARIES = \
 
 @SPLIT_COMPILE_TRUE@libcom_la_SOURCES = \
 @SPLIT_COMPILE_TRUE@	timer.cpp \
-@SPLIT_COMPILE_TRUE@	memusage.cpp
+@SPLIT_COMPILE_TRUE@	memusage.cpp \
+@SPLIT_COMPILE_TRUE@	common.cpp
 
 libcom_la_LIBADD = \
 	$(BOOST_FILESYSTEM_LIB) \
@@ -442,6 +444,7 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/all.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/common.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/memusage.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/timer.Plo@am__quote@
 
