--- a/src/mm/Makefile.in
+++ b/src/mm/Makefile.in
@@ -141,11 +141,10 @@ am__DEPENDENCIES_1 =
 libmm_la_DEPENDENCIES = $(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
 	$(am__DEPENDENCIES_1)
 am__libmm_la_SOURCES_DIST = all.cpp cut.cpp ast.cpp sys.cpp merge.cpp \
-	parser.cpp show.cpp translate.cpp tree.cpp
+	parser.cpp show.cpp translate.cpp
 @SPLIT_COMPILE_FALSE@am_libmm_la_OBJECTS = all.lo
 @SPLIT_COMPILE_TRUE@am_libmm_la_OBJECTS = cut.lo ast.lo sys.lo \
-@SPLIT_COMPILE_TRUE@	merge.lo parser.lo show.lo translate.lo \
-@SPLIT_COMPILE_TRUE@	tree.lo
+@SPLIT_COMPILE_TRUE@	merge.lo parser.lo show.lo translate.lo
 libmm_la_OBJECTS = $(am_libmm_la_OBJECTS)
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
@@ -359,8 +358,7 @@ lib_LTLIBRARIES = \
 	libmm.la
 
 noinst_HEADERS = \
-	cut_adaptor.hpp \
-	tree.hpp 
+	cut_adaptor.hpp
 
 @SPLIT_COMPILE_FALSE@libmm_la_SOURCES = \
 @SPLIT_COMPILE_FALSE@	all.cpp
@@ -372,8 +370,7 @@ noinst_HEADERS = \
 @SPLIT_COMPILE_TRUE@	merge.cpp \
 @SPLIT_COMPILE_TRUE@	parser.cpp \
 @SPLIT_COMPILE_TRUE@	show.cpp \
-@SPLIT_COMPILE_TRUE@	translate.cpp \
-@SPLIT_COMPILE_TRUE@	tree.cpp
+@SPLIT_COMPILE_TRUE@	translate.cpp
 
 libmm_la_LIBADD = \
 	$(BOOST_FILESYSTEM_LIB) \
@@ -466,7 +463,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/show.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sys.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/translate.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/tree.Plo@am__quote@
 
 .cpp.o:
 @am__fastdepCXX_TRUE@	$(AM_V_CXX)depbase=`echo $@ | sed 's|[^/]*$$|$(DEPDIR)/&|;s|\.o$$||'`;\
